--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,8 @@
 html {
-	max-width: 900px;
-	min-width: 500px;
-	height: 100%;
-	margin: 0 auto;
+    max-width: 900px;
+    min-width: 600px;
+    height: 100%;
+    margin: 0 auto;
 
     font-family: "Lato", sans-serif;
     color: #181818;
@@ -27,5 +27,57 @@ header {
     height: min-content;
 
     color: white;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+header .nav-list {
+    display: flex;
+    gap: 0.5rem;
+}
+
+header .nav-list div:hover {
+    color: yellow;
+}
+
+header .phone-number {
+    color: black;
+    background-color: white;
+    padding: 0.5rem;
+    border-radius: 2rem;
+    text-wrap: nowrap;
+
+    transition:
+        color 0.4s ease,
+        background-color 0.4s ease;
+}
+
+header .phone-number:hover {
+    color: white;
+    background-color: black;
+    transition:
+        color 0.4s ease,
+        background-color 0.4s ease;
+}
+
+.description-green {
+    background-color: #5ab612;
+
+    text-transform: uppercase;
+    font-family: "Lato", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 148%;
+    letter-spacing: 0.14em;
+    color: #fff;
+    border-radius: 20px;
+    padding: 0 12px;
+    display: inline-block;
+}
+
+
+@media (max-width: 600px) {
+    header {
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
